Added more javascript and a coming soon page

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,14 @@
 	object-fit: cover;
 }
 
+.areas {
+	margin: 10px 0;
+}
+
+.allAreas {
+	font-family: 'Quicksand', sans-serif;
+}
+
 .allFish {
 	font-family: 'Quicksand', sans-serif;
 }
@@ -88,11 +96,27 @@ body {background-color: #77b1a6;}
 	justify-content: space-around;
 }
 
+.location {
+	margin-left: 50%;
+}
+
+.loc__banner {
+	margin-top: 70px;
+}
+
+.quotes {
+	font-size: 25px;
+}
+
+.location p {
+	font-size: 14px;
+}
+
 .locations {
 	font-family: 'Mukta', sans-serif;
 	font-weight: 400;
 	font-size: 18px;
-	order: 1;
+	order: 2;
 	text-align: center;
 }
 
@@ -135,13 +159,14 @@ body {background-color: #77b1a6;}
 
 .process {
 	bottom: 500px;
-	margin-top: -700px;
+	margin-top: -30%;
 	border-right: 10px inset #282929;
 	width: calc(100% - 25px);
 }
 
 .tips {
-	margin-top: 500px;
-	padding: 10px;
+	font-family: 'Mukta', sans-serif;
+	margin-top: 10%;
+	margin-bottom: 2%;
 	text-align: center;
 }
